crates/service/tests/completion/snapshots/features__completion__memory__deprecated.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6,
    "tags": [
      1
    ]
  },
  {
    "label": "$memory",
    "kind": 6,
    "tags": [
      1
    ]
  }
]
