crates/service/tests/completion/snapshots/features__completion__memory__export_desc_memory.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "$memory",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 22
        },
        "end": {
          "line": 2,
          "character": 23
        }
      },
      "newText": "$memory"
    }
  }
]
