crates/service/tests/completion/snapshots/features__completion__memory__export_desc_memory_incomplete.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "$memory",
    "kind": 6,
    "insertText": "memory"
  }
]
