crates/service/tests/completion/snapshots/features__completion__memory__extern_idx_memory_following_dollar.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "$memory",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 23
        },
        "end": {
          "line": 2,
          "character": 24
        }
      },
      "newText": "$memory"
    }
  }
]
