crates/service/tests/completion/snapshots/features__completion__memory__load_and_store_instr.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6
  },
  {
    "label": "$memory",
    "kind": 6
  },
  {
    "label": "offset=",
    "kind": 15
  },
  {
    "label": "align=",
    "kind": 15
  }
]
