crates/service/tests/completion/snapshots/features__completion__memory__load_and_store_instr_after_mem_arg.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "offset=",
    "kind": 15
  },
  {
    "label": "align=",
    "kind": 15
  }
]
