crates/service/tests/completion/snapshots/features__completion__memory__memory_fill.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 18
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$memory",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 18
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "newText": "$memory"
    }
  }
]
