crates/service/tests/completion/snapshots/features__completion__memory__memory_size.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 16
        },
        "end": {
          "line": 4,
          "character": 17
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$memory",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 16
        },
        "end": {
          "line": 4,
          "character": 17
        }
      },
      "newText": "$memory"
    }
  }
]
