crates/service/tests/completion/snapshots/features__completion__memory__pagesize_incomplete.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "1",
    "kind": 21
  },
  {
    "label": "65536",
    "kind": 21
  }
]
