crates/service/tests/completion/snapshots/features__completion__memory__pagesize_keyword_incomplete.snap
---
source: crates/service/tests/completion/memory.rs
expression: response
---
[
  {
    "label": "import",
    "kind": 14
  },
  {
    "label": "export",
    "kind": 14
  },
  {
    "label": "data",
    "kind": 14
  },
  {
    "label": "pagesize",
    "kind": 14
  }
]
